--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "opencage-api-client": "^1.0.7",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "pg": "^8.12.0"
