Added nodemailer with mailjet to send reminder through email, added cron to check reminder date

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
+    "nodemailer-mailjet-transport": "^1.0.4",
     "opencage-api-client": "^1.0.7",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
