--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "opencage-api-client": "^1.0.7",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "qrcode": "^1.5.4",
+    "stripe": "^16.9.0"
   }
 }
