--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "opencage-api-client": "^1.0.7",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   }
 }
