--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "passport-facebook": "^3.0.0",
     "pg": "^8.12.0",
     "qrcode": "^1.5.4",
-    "stripe": "^16.9.0"
+    "stripe": "^16.9.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
